[package]
name        = "box"
authors     = ["Colonial"]
version     = "0.6.1"
edition     = "2021"
description = "A simple container manager for your shell."
repository  = "https://github.com/Colonial-Dev/box"
license     = "AGPL-3.0"

[profile.release]
opt-level     = "z"
codegen-units = 1
lto           = true

[dependencies]
# Command line.
clap        = { version = "4.5.23", features = ["derive"] }
# TODO - potentially shed dependencies on dialoguer and indicatif
dialoguer   = { version = "0.11.0", default-features = false, features = ["editor"] }
indicatif   = "0.17.9"
comfy-table = "7.1.3"
colored     = "3.0.0"

# Logging and error reporting
color-eyre = { version = "0.6.3", default-features = false, features = ["track-caller"] }
env_logger = { version =  "0.11.6", default-features = false }
log        = "0.4.22"

# Serde cinematic universe
serde      = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
toml       = { version = "0.8.19", default-features = false, features = ["parse"] }

# Other
petgraph = { version = "0.7.0", default-features = false }
libc     = "0.2.172"

[[bin]]
name = "bx"
path = "src/main.rs"
